simplify README